tests/lean/277a.lean.expected.out
277a.lean:4:7-4:15: error: unknown identifier 'nonexistant'
277a.lean:4:0-4:25: error: cannot evaluate code because it uses 'sorry' and/or contains errors
